--- a/site/public/contato.html
+++ b/site/public/contato.html
@@ -7,8 +7,9 @@
     <title>Contato</title>
     <link rel="stylesheet" href="css/styleContato.css">
     <link rel="shortcut icon" href="assets/img/Logotipo.png" type="image/x-icon">
+    <script src="js/funcoes.js"></script>
 </head>
-<body>
+<body onload="validarSessao2()">
     <div class="navbar">
         <nav class="navigation">
             <a href="simulador.html">Calculadora</a>
