--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="css/styleslide.css">
   <link rel="stylesheet" href="css/styleSobre.css">
   <link rel="shortcut icon" href="assets/img/Logotipo.png" type="image/x-icon">
+  <script src="js/funcoes.js"></script>
 </head>
 
-<body>
+<body onload="validarSessao2()">
   <div class="navbar">
     <nav class="navigation">
       <a class="navborder" href="index.html">Home</a>
