--- a/site/public/simulador.html
+++ b/site/public/simulador.html
@@ -8,11 +8,12 @@
     <link rel="shortcut icon" href="assets/img/Logotipo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/styleCalc.css">
+    <script src="js/funcoes.js"></script>
     <script src="js/calc.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
-<body>
+<body onload="validarSessao2()">
     <div class="navbar">
         <nav class="navigation">
             <div class="dropdown">
