Concertando ultimos erros

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -245,7 +245,7 @@
 
     function visualizarTermos() {
         cardErro.style.display = "block"
-        cardErro.innerHTML = `Ao assinar esses termos eu garanto que não causarei problemas, não hackearei o site e serei responsavel jogando genshin impact.`
+        mensagem_erro.innerHTML = `Ao assinar esses termos eu garanto que não causarei problemas, não hackearei o site e serei responsavel jogando genshin impact.`
         setTimeout(sumirMensagem, 10000)
     }
 
