Adição da pagina Sorte diaria

--- a/site/public/dashboard/cards.html
+++ b/site/public/dashboard/cards.html
@@ -38,6 +38,7 @@
                 <div class="dropdown-content">
                     <span id="perfil" href="#"></span>
                     <a href="calc.html">Calculadora</a>
+                    <a href="SorteDiaria.html">Sorte</a>
                     <a onclick="limparSessao()" href="../cadastro.html?#">Sair</a>
                 </div>
             </div>
