--- a/site/public/dashboard/contato.html
+++ b/site/public/dashboard/contato.html
@@ -70,7 +70,7 @@
                         <span>Escreva sua Mensagem...</span>
                     </div>
                     <div class="inputBox">
-                        <input type="submit" name="" value="Enviar">
+                        <a href="mailto:nathan.oliveira@sptech.school"><button type="submit" name="" value="Enviar">Enviar</button></a>
                     </div>
                 </form>
             </div>
