--- a/site/public/html/Fontaine.html
+++ b/site/public/html/Fontaine.html
@@ -15,8 +15,8 @@
     <section class="slider">
         <div class="conteudo">
     
-         <div class="texto_slide">
-          Fontaine
+         <div class="texto_slide" onclick="voltar()">
+          Fontaine - Coming Soon
          </div>
     
           <input type="radio" name="slide" id="slide0">
