--- a/site/public/html/Mondstadt.html
+++ b/site/public/html/Mondstadt.html
@@ -14,7 +14,7 @@
     <section class="slider">
         <div class="conteudo">
     
-         <div class="texto_slide">
+         <div class="texto_slide" onclick="voltar()">
           Mondstand
          </div>
     
